Fixes table text alignment to the left

--- a/style.css
+++ b/style.css
@@ -154,7 +154,8 @@ main {
 	color: #757575;
 }
 
-.main-currency-table {
+.main-currency-table,
+.main-commissions-table {
 	width: 70%;
 	min-width: 235px;
 	max-width: 500px;
@@ -163,7 +164,8 @@ main {
 	font-family: "Inter", sans-serif;
 }
 
-.main-currency-table .currency-table--title {
+.main-currency-table .currency-table--title,
+.main-commissions-table .commissions-table--title {
 	margin-bottom: 15px;
 	font-size: 1.8rem;
 	font-weight: bold;
@@ -171,7 +173,22 @@ main {
 	color: var(--bitcoin-orange);
 }
 
-.currency-table--container {
+.currency-table--title,
+.commissions-table--title {
+	text-align: left;
+	margin-left: 20px;
+}
+
+.main-commissions-table .commissions-table--title {
+	margin-bottom: 15px;
+	font-size: 1.8rem;
+	font-weight: bold;
+	line-height: 2.3rem;
+	color: var(--secondary-blue);
+}
+
+.currency-table--container,
+.commissions-table--container {
 	width: 90%;
 	min-width: 230px;
 	max-width: 300px;
@@ -179,44 +196,54 @@ main {
 	margin: 0 auto;
 }
 
-.currency-table--container table {
+.currency-table--container table,
+.commissions-table--container table {
 	width: 100%;
 	height: 100%;
 }
 
-.currency-table--container td {
+.currency-table--container td,
+.commissions-table--container td {
 	width: 50%;
 	font-size: 1.6rem;
 	font-weight: 500;
 	line-height: 1.9rem;
 	color: var(--grey);
 	background-color: var(--just-white);
+	text-align: left;
+	padding-left: 25px;
 }
 
-.currency-table--container .table__top-left {
+.currency-table--container .table__top-left,
+.commissions-table--container .table__top-left {
 	border-radius: 15px 0 0 0;
 }
 
-.currency-table--container .table__top-right {
+.currency-table--container .table__top-right,
+.commissions-table--container .table__top-right {
 	border-radius: 0 15px 0 0;
 }
 
-.currency-table--container .table__bottom-left {
+.currency-table--container .table__bottom-left,
+.commissions-table--container .table__bottom-left {
 	border-radius: 0 0 0 15px;
 }
 
-.currency-table--container .table__bottom-right {
+.currency-table--container .table__bottom-right,
+.commissions-table--container .table__bottom-right {
 	border-radius: 0 0 15px 0;
 }
 
-.currency-table--container .table__right {
+.currency-table--container .table__right,
+.commissions-table--container .table__right {
 	font-size: 1.4rem;
 	font-weight: normal;
 	line-height: 1.7rem;
 	color: #757575;
 }
 
-.currency-table--container .down {
+.currency-table--container .down,
+.commissions-table--container .down {
 	display: inline-block;
 	width: 15px;
 	height: 15px;
@@ -226,7 +253,8 @@ main {
 	background-position: center;
 	background-repeat: no-repeat;
 }
-.currency-table--container .up {
+.currency-table--container .up,
+.commissions-table--container .up {
 	display: inline-block;
 	width: 15px;
 	height: 15px;
@@ -235,4 +263,31 @@ main {
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
+}
+
+.currency-table--date {
+	width: 190px;
+	height: 30px;
+	margin: 0 auto;
+	margin-top: 15px;
+	padding: 8px;
+	background-color: var(--soft-orange);
+	border-radius: 8px;
+}
+.commissions-table--date {
+	width: 190px;
+	height: 30px;
+	margin: 0 auto;
+	margin-top: 15px;
+	padding: 8px;
+	background-color: var(--soft-blue);
+	border-radius: 8px;
+}
+
+.currency-table--date p,
+.commissions-table--date p {
+	font-size: 1.2rem;
+	line-height: 1.5rem;
+	font-weight: 300;
+	color: var(--warm-black);
 }
